fix:fix bg consultation section abd showgray  line on mobile page,bg lazy bison section, font and color on  blog page

--- a/assets/sass/_blog-page.scss
+++ b/assets/sass/_blog-page.scss
@@ -70,6 +70,10 @@
 	text-align: left;
 }
 
+.full-info-blog__section li {
+	font-size: 1rem;
+}
+
 .blog-page__wrapper h1 {
 	font-size: 2.625rem;
 	font-weight: 600;
