--- a/assets/sass/sections/_section-consultation.scss
+++ b/assets/sass/sections/_section-consultation.scss
@@ -111,6 +111,8 @@
 
 @media (max-width: $breakpoint-md) {
 	.consultation {
+		background-image: url('/images/sections/section-testimonials/consultation-section-bg-375.svg');
+		background-position: 50% 25%;
 		padding: 0;
 	}
 
